@@ -4,6 +4,8 @@
 Broker:
 - Elevate log level to warning for situation when socket limit is hit.
 - Remove requirement to use `user root` in snap package config files.
+- Fix retained messages not sent by bridges on outgoing topics at the first
+  connection. Closes #701.
 
 Build:
 - Various fixes to ease building.
